tests/ui/consts/const-item-no-type/dont-suggest-type-error.stderr
error[E0369]: cannot add `{integer}` to `&str`
  --> $DIR/dont-suggest-type-error.rs:2:28
   |
LL |     const FOO: _ = "hello" + 1;
   |                    ------- ^ - {integer}
   |                    |
   |                    &str

error[E0121]: the placeholder `_` is not allowed within types on item signatures for constants
  --> $DIR/dont-suggest-type-error.rs:2:16
   |
LL |     const FOO: _ = "hello" + 1;
   |                ^ not allowed in type signatures

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0121, E0369.
For more information about an error, try `rustc --explain E0121`.
